[gd_scene load_steps=13 format=3 uid="uid://4tsfp5wh8b76"]

[ext_resource type="Script" path="res://scenes/Level.gd" id="1_ecomx"]
[ext_resource type="Texture2D" uid="uid://ku77ijcyhyxf" path="res://assets/images/adventure/level/rings.png" id="2_lb3c5"]
[ext_resource type="PackedScene" uid="uid://brugnrgwx16j7" path="res://scenes/player/player.tscn" id="3_2xje8"]
[ext_resource type="AudioStream" uid="uid://cnwuokyyhhe8g" path="res://assets/sfx/complete.wav" id="4_c0wex"]
[ext_resource type="AudioStream" uid="uid://w4nlhppoeef1" path="res://assets/music/jelly_music1.ogg" id="5_ty738"]
[ext_resource type="PackedScene" uid="uid://bk64qs4lsiegj" path="res://scenes/objects/fox.tscn" id="7_77tyb"]
[ext_resource type="PackedScene" uid="uid://cdp0atcsjk7jj" path="res://scenes/objects/crow.tscn" id="8_vlhxp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlwot"]
size = Vector2(256, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sv0wn"]
size = Vector2(20, 308)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tq3uu"]
size = Vector2(256, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfety"]
size = Vector2(12, 208)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbtrj"]
size = Vector2(259.5, 47.5)

[node name="Level" type="Node2D"]
position = Vector2(128, 120)
script = ExtResource("1_ecomx")

[node name="Backgrounds" type="Sprite2D" parent="."]
z_index = -3
texture_filter = 1
texture = ExtResource("2_lb3c5")
hframes = 3
vframes = 4

[node name="FallPlane" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallPlane"]
position = Vector2(0, 107.5)
shape = SubResource("RectangleShape2D_rlwot")

[node name="LevelBounds" type="StaticBody2D" parent="."]
collision_layer = 8388609

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(-138, -34)
shape = SubResource("RectangleShape2D_sv0wn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(138, -34)
shape = SubResource("RectangleShape2D_sv0wn")

[node name="GroundCollision" type="StaticBody2D" parent="."]
collision_layer = 8388609
collision_mask = 8388613

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundCollision"]
position = Vector2(0, 104)
shape = SubResource("RectangleShape2D_tq3uu")

[node name="SuccessPlane" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuccessPlane"]
position = Vector2(122, -16)
shape = SubResource("RectangleShape2D_vfety")

[node name="BirdBounds" type="StaticBody2D" parent="."]
collision_layer = 2048
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BirdBounds"]
position = Vector2(1, -84)
shape = SubResource("RectangleShape2D_mbtrj")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BirdBounds"]
position = Vector2(-0.5, 113)
shape = SubResource("RectangleShape2D_mbtrj")

[node name="Player" parent="." instance=ExtResource("3_2xje8")]
position = Vector2(-111, 72)

[node name="Complete" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("4_c0wex")
bus = &"Music"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ty738")
bus = &"Music"

[node name="Crow" parent="." instance=ExtResource("8_vlhxp")]
position = Vector2(-40, 7)
variant = 1

[node name="Timer" type="Timer" parent="."]
process_mode = 2
wait_time = 3.0
one_shot = true

[node name="Fox" parent="." instance=ExtResource("7_77tyb")]
position = Vector2(51, 78)
variant = 1

[connection signal="body_entered" from="FallPlane" to="." method="_on_fall_plane_body_entered"]
[connection signal="body_entered" from="SuccessPlane" to="." method="_on_success_plane_body_entered" flags=18]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
